# symbi-codered

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  symbi.toml  toolclad.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  refresh-compromised-packages.yml  release.yml  test.yml
.symbiont/: local-policy.toml
agents/: audit-controller.symbi  cartographer.symbi  chain_builder.symbi  devils_advocate.symbi  hypothesis_repl.symbi  pattern_scout.symbi  poc_forge.symbi  reflector.symbi  specifier.symbi  static_hunter.symbi
crates/symbi-codered-cli/: Cargo.toml
crates/symbi-codered-cli/src/: main.rs
crates/symbi-codered-cli/src/commands/: advocate.rs  advocate_model.rs  audit.rs  carto.rs  hunt.rs  mod.rs  report.rs  specifier.rs  tools.rs  version.rs
crates/symbi-codered-cli/src/commands/grc/: crosswalk.json  mod.rs
crates/symbi-codered-cli/tests/: audit_cli.rs  carto_e2e.rs  chain_e2e.rs  hunt_e2e.rs  plan_e_e2e.rs  plan_f_java_e2e.rs  plan_f_php_e2e.rs  plan_f_rust_e2e.rs  plan_g_e2e.rs  tools_cli.rs
crates/symbi-codered-core/: Cargo.toml
crates/symbi-codered-core/src/: audit.rs  db.rs  lance.rs  lib.rs  orga.rs  policy.rs  schema.sql  signing.rs  toolclad.rs
crates/symbi-codered-core/src/embeddings/: local.rs  mod.rs  provider.rs
crates/symbi-codered-core/tests/: orga_smoke.rs  policy_load.rs  toolclad_load.rs
crates/symbi-codered-tools/: Cargo.toml
crates/symbi-codered-tools/examples/: guard_check.rs
crates/symbi-codered-tools/src/: chain_builder.rs  chunker.rs  dataflow.rs  dependency_graph.rs  devils_advocate.rs  grep_semantic.rs  hypothesis_repl.rs  lib.rs  pattern_scout.rs  pattern_scout_tools.rs  poc_forge.rs  read_context.rs  recall_journal.rs  reflector.rs  repo_git_meta.rs  repo_overview.rs  route_map_python.rs  sandbox_client.rs  scanner_client.rs  specifier.rs  static_hunter.rs  symbols.rs  taint_tracer.rs  tool_defs.rs  tree_sitter_loader.rs  walk.rs
crates/symbi-codered-tools/src/chain_builder/: executor.rs
crates/symbi-codered-tools/src/devils_advocate/: executor.rs
crates/symbi-codered-tools/src/pattern_scout/: executor.rs
crates/symbi-codered-tools/src/poc_forge/: executor.rs
crates/symbi-codered-tools/src/reflector/: executor.rs
crates/symbi-codered-tools/src/reporter/: markdown.rs  mod.rs  sarif.rs  seed.rs
crates/symbi-codered-tools/src/scanner_parsers/: bandit.rs  cargo_audit.rs  checkov.rs  clippy.rs  compromised_packages.rs  eslint.rs  gosec.rs  govulncheck.rs  mod.rs  npm_audit.rs  pip_audit.rs  progpilot.rs  ruff.rs  semgrep.rs  semgrep_rust.rs  semgrep_ts.rs  staticcheck.rs  tfsec.rs  trivy.rs
crates/symbi-evidence-schema/: Cargo.toml
crates/symbi-evidence-schema/src/: attack_chain.rs  citation.rs  engagement.rs  evidence.rs  finding.rs  hypothesis.rs  knowledge.rs  lib.rs  taint_chain.rs  threat_model.rs
docs/: architecture.md  cli-reference.md  contributing.md  getting-started.md  governance.md  index.md  language-coverage.md  pipeline-stages.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
orchestrator/: Dockerfile  entrypoint.sh
policies/: advocate.cedar  cartographer.cedar  citation.cedar  evidence.cedar  handoff.cedar  network.cedar  phase-gates.cedar  portal.cedar  reflector.cedar  scope.cedar  step-up.cedar  tool-authorization.cedar
scanners/go/: Dockerfile  scanner-runner.py
scanners/go-sandbox/: Dockerfile  run-reproducer.py
scanners/iac/: Dockerfile  scanner-runner.py
scanners/java/: Dockerfile  scanner-runner.py
scanners/java-sandbox/: Dockerfile  run-reproducer.py
scanners/php/: Dockerfile  scanner-runner.py
scanners/php-sandbox/: Dockerfile  entrypoint.sh  run-reproducer.py
scanners/python/: Dockerfile  scanner-runner.py
scanners/python-sandbox/: Dockerfile  run-reproducer.py
scanners/rust/: Dockerfile  entrypoint.sh  scanner-runner.py
scanners/rust-sandbox/: Cargo.toml.seed  Dockerfile  run-reproducer.py
scanners/typescript/: Dockerfile  eslintrc.json  scanner-runner.py  test_scanner_runner.py
scanners/typescript-sandbox/: Dockerfile  package.json.seed  run-reproducer.py
tests/: boot_test.sh
tests/fixtures/go-net-http-vuln/: README.md  go.mod  main.go
tests/fixtures/java-servlet-vuln/: README.md  pom.xml
tests/fixtures/java-servlet-vuln/src/main/java/com/example/: UserServlet.java
tests/fixtures/php-sqli-vuln/: README.md  composer.json  index.php
tests/fixtures/python-flask-vuln/: Dockerfile  pyproject.toml  requirements.txt
tests/fixtures/python-flask-vuln/app/: __init__.py  db.py
tests/fixtures/python-flask-vuln/app/routes/: admin.py  users.py
tests/fixtures/rust-axum-vuln/: Cargo.toml  README.md
tests/fixtures/rust-axum-vuln/src/: main.rs
tests/fixtures/typescript-express-vuln/: README.md  package.json
tests/fixtures/typescript-express-vuln/src/: index.ts
tools/: advocate_finding.clad.toml  bandit.clad.toml  build_attack_chain.clad.toml  cargo_audit.clad.toml  checkov.clad.toml  clippy_security.clad.toml  compromised_packages.clad.toml  dependency_graph.clad.toml  eslint_security.clad.toml  find_symbol.clad.toml  gosec.clad.toml  govulncheck.clad.toml  grep_semantic.clad.toml  hypothesis_repl.clad.toml  mark_poc_status.clad.toml  npm_audit.clad.toml  pin_threat_model.clad.toml  pip_audit.clad.toml  query_findings.clad.toml  query_taint_chains.clad.toml  query_threat_model.clad.toml  read_context.clad.toml  read_context_range.clad.toml  read_symbol.clad.toml  recall_journal.clad.toml  repo_overview.clad.toml  route_map.clad.toml  ruff_security.clad.toml  run_reproducer.clad.toml  semgrep.clad.toml  semgrep_rust.clad.toml  semgrep_ts.clad.toml  staticcheck.clad.toml  taint_trace.clad.toml  tfsec.clad.toml  trivy.clad.toml  write_knowledge_triple.clad.toml
