[package]
name        = "symbi-codered-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistence, embeddings, Cedar policy, ToolClad validation for symbi-codered"

[dependencies]
symbi-evidence-schema = { workspace = true }
symbi-runtime = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
sha2        = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
rusqlite    = { workspace = true }
lancedb     = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
fastembed   = { workspace = true }
cedar-policy = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
rand          = "0.8"
hex           = "0.4"

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
