[package]
name        = "symbi-codered-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native MCP tools for the symbi-codered cartographer phase (repo_overview, dependency_graph, find/read_symbol, route_map, grep_semantic, recall_journal)"

[dependencies]
symbi-evidence-schema = { workspace = true }
symbi-codered-core    = { workspace = true }
symbi-runtime         = { workspace = true }
async-trait           = "0.1"
cedar-policy          = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
toml                  = { workspace = true }
thiserror             = { workspace = true }
anyhow                = { workspace = true }
uuid                  = { workspace = true }
chrono                = { workspace = true }
rusqlite              = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }

# Plan B specifics
tree-sitter           = "0.26"
tree-sitter-python    = "0.25"
tree-sitter-toml-ng   = "0.7"
tree-sitter-yaml      = "0.7"
tree-sitter-json      = "0.24"
tree-sitter-containerfile = "0.8"
tree-sitter-rust          = "0.24"
tree-sitter-go            = "0.25"
tree-sitter-typescript    = "0.23"
tree-sitter-javascript    = "0.25"
tree-sitter-java          = "0.23"
tree-sitter-php           = "0.23"
walkdir               = "2"
regex                 = "1"
futures               = "0.3"
arrow-array           = { workspace = true }
lancedb               = { workspace = true }

[dev-dependencies]
tempfile = "3"
insta    = { version = "1", features = ["yaml"] }
scopeguard = "1"
