[package]
name        = "symbi-evidence-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared evidence / finding / engagement / knowledge types used by symbi-codered and symbi-redteam"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
